<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".Buyers.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl33"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarThumbHorizontal="@null"
        android:scrollbarThumbVertical="@null">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/urban_order" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/login_logo"
            android:backgroundTint="#E6FFFFFF"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:text="@string/text_signin_message"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/login_c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvview"
                android:layout_gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_phone_number_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="12dp"
                        android:inputType="number"
                        android:textColor="@color/button_text_color"
                        android:textColorHint="@color/button_text_color"
                        android:hint="@string/hint_phone"
                        android:imeOptions="actionNext"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/login_c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@+id/login_c1"
                android:layout_margin="8dp"
                android:layout_centerInParent="true"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:textColor="@color/button_text_color"
                        android:hint="@string/hint_password"
                        android:textColorHint="@color/button_text_color"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_c2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:text="Remember Me"
            android:textColor="@color/button_text_color"
            android:textSize="15sp"
            android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/forget_password_link"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_c2"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="16dp"
                    android:gravity="right"
                    android:layout_toEndOf="@+id/remember_me_chkb"
                    android:layout_toRightOf="@+id/remember_me_chkb"
                    android:text="Forget Password?"
                    android:textColor="@color/button_text_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remember_me_chkb"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="20dp"
                android:padding="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                app:nb_backgroundColor="@color/purple_500"
                app:nb_borderColor="@color/button_border_color"
                app:nb_borderWidth="2dp"
                app:nb_focusColor="@color/purple_700"
                app:nb_fontIcon="&#xf090;"
                app:nb_radius="20dp"
                app:nb_text="Login"
                app:nb_textColor="@color/button_text_color" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/admin_panel_link"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_alignParentRight="true"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="17dp"
                android:layout_marginRight="16dp"
                android:layout_toEndOf="@+id/not_admin_panel_link"
                android:layout_toRightOf="@+id/not_admin_panel_link"
                android:gravity="right"
                android:paddingRight="5dp"
                android:text="I'm an Admin?"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/not_admin_panel_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:text="I'm not an Admin?"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/social_layout"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_below="@+id/not_admin_panel_link"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/text_signin_social_media"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/so"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_google"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />

                    <ImageView
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_facebook"
                        android:layout_width="40dp"
                        android:layout_height="40dp" />
                </LinearLayout>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/register_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/button_text_color"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal" />
            </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>